# langler-backend

./: .gitignore  CLAUDE.md  Makefile  README.md  go.mod  go.sum
cmd/api/: main.go  main_test.go
cmd/authorizer/: main.go
docs/: agent-authoring.md  assessments.md  lessons.md  reference-data.md
etl/: .gitignore  README.md  pyproject.toml
etl/langler_etl/: build.py  build_burmese.py  build_polish.py  burmese.py  cli.py  curation.py  download.py  embeddings.py  examples.py  grammar.py  jlpt.py  jmdict.py  kana.py  kanjidic.py  kradfile.py  load.py  polish.py  sources.py  topics.py
etl/langler_etl/data/: grammar_ja.json  grammar_my.json  grammar_pl.json  kana.json  orthography_pl.json  script_my.json  topics_ja.json  topics_my.json  topics_pl.json
etl/tests/: conftest.py  test_build.py  test_burmese.py  test_curation.py  test_download.py  test_embeddings.py  test_examples.py  test_grammar.py  test_jlpt.py  test_jmdict.py  test_kana.py  test_kanjidic.py  test_kradfile.py  test_load.py  test_polish.py  test_topics.py
etl/tests/fixtures/data/: examples.utf  jmdict-eng.json  kanjidic2.xml  kradfile.txt
etl/tests/fixtures/data/jlpt/: n2.csv  n3.csv  n4.csv  n5.csv
internal/application/agenttokens/: service.go  service_test.go
internal/application/assessments/: service.go  service_test.go
internal/application/lessons/: glossary.go  prompt.go  service.go  service_test.go  topics.go  topics_test.go
internal/application/progress/: service.go  service_test.go
internal/application/reference/: service.go  service_test.go
internal/domain/agenttoken/: token.go
(+72 files in other folders)
